...
    <string name="label_immunization_records">IMMUNISATION &amp; SERVICES</string>

    <string name="unauthorized">Please check the credentials</string>
    <string name="unauthorized_group">Your user group is not allowed to access this device</string>
    <string name="unknown_response">login failed. Try later</string>
    <string name="no_internet_connectivity">No internet connection. Please ensure data connectivity</string>
    <string name="login_text">Log In</string>
    <string name="show_password_text">Show password</string>
    <string name="complete">Complete</string>
    <string name="updating_dialog_title">Updating…</string>
    <string name="remove_from_register">REMOVE FROM REGISTER</string>
    <string name="url_separator">/</string>
    <string name="clients_key">clients</string>
...
    <string name="validation_no_valid_danger_sign">Please at least one danger sign other than None</string>
    <string name="validation_unable_to_save_quick_check">Unable to save quick check event</string>

    <string name="cyanosis_info">Bluish discolouration around the mucous membranes in the mouth, lips and tongue</string>

    <string name="any_treatment">Any treatment given\nbefore referral?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
	<string name="contact">CONTACT&#10;22/05/2018</string>
    <string name="add_member">ADD&#10;MEMBER</string>

    <string name="library_placeholder">Library Placeholder</string>
	<string name="me_page_placeholder">Me Page Placeholder</string>
...
