...
    <android.support.design.org.smartregister.cbhc.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.org.smartregister.cbhc.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginLeft="-10dp"
            android:background="@color/actionbar">

            <include layout="@layout/tool_bar" />
...
